Added the basic structure of Hoff and data types

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,11 +6,15 @@ php:
   - hhvm
   - nightly
 
+services:
+  - mysql
+  
 script:
   - wget https://github.com/satooshi/php-coveralls/releases/download/v1.0.0/coveralls.phar
   - chmod +x coveralls.phar
   - composer self-update
   - composer clear-cache
   - composer install
+  - mysql -e 'create database hoff;'
   - phpunit -c phpunit.xml
   - php coveralls.phar -v -x build/logs/clover.xml
